# icp-notifications

./: Cargo.toml  dfx.json
backend/canisters/notifications/: Cargo.toml  can.did
backend/canisters/notifications/api/: Cargo.toml  can.did
backend/canisters/notifications/api/src/queries/: mod.rs  notifications.rs  subscription.rs  subscriptions.rs
backend/canisters/notifications/api/src/updates/: mod.rs  subscribe.rs  unsubscribe.rs
backend/canisters/notifications/impl/: Cargo.toml
backend/canisters/notifications/impl/src/: env.rs  ledger.rs  lib.rs
backend/canisters/notifications/impl/src/lifecycle/: heartbeat.rs  init.rs  inspect_message.rs  mod.rs  post_upgrade.rs  pre_upgrade.rs
backend/canisters/notifications/impl/src/model/: mod.rs  notifications.rs  subscriptions.rs  transaction_import_state.rs
backend/canisters/notifications/impl/src/queries/: notifications.rs  subscription.rs  subscriptions.rs
backend/canisters/notifications/impl/src/updates/: remove_notifications.rs  subscribe.rs  unsubscribe.rs
backend/canisters/notifications/src/: ledger.rs  lib.rs
backend/canisters/notifications/src/lifecycle/: heartbeat.rs  inspect_message.rs  mod.rs
backend/canisters/notifications/src/model/: notifications.rs  subscriptions.rs  transaction_import_state.rs
backend/canisters/notifications/src/queries/: mod.rs  notifications.rs  subscription.rs  subscriptions.rs
backend/canisters/notifications/src/updates/: mod.rs  remove_notifications.rs  subscribe.rs  unsubscribe.rs
backend/libraries/types/: Cargo.toml  can.did
backend/libraries/types/src/: lib.rs  notification.rs  notification_target.rs  subscription.rs  transaction_notification.rs
